# WSN-Simulation

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
src/wsn_simulation/: __main__.py  core.py  manager.py  media.py  message.py  monte_carlo.py  results.py
src/wsn_simulation/node/: __init__.py  core.py  sensor.py  sink.py
